fixed css so it didn't touch checkboxes and misalign them

--- a/client/src/pages/Form.css
+++ b/client/src/pages/Form.css
@@ -1,3 +1,3 @@
-.form-group {
+.form-control {
     width: 50%;
 }
